# img2excel

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  requirements.txt  run_gui.py
img2excel/: __init__.py  cli.py  core.py  gui.py  pyproject.toml  utils.py
